# misery

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  clickhouse.xml  docker-compose.yml  mypy.ini  pyproject.toml
depression/: core.py  dict_repo.py  pg_repo.py
docs/source/: api.rst  conf.py  for_contributors.rst  guide.rst  index.rst
misery/: __init__.py  clickhouse.py  core.py  dict_repo.py  dictionary.py  pg_repo.py  postgres.py
tests/: base.py  conftest.py  test_clickhouse.py  test_dict_repo.py  test_dictionary.py  test_pg_repo.py  test_postgres.py
