[tool.poetry]
name = "misery"
version = "0.0.0"
description = ""
authors = ["Anton Evdokimov <meowmeowcode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.1.0"
mypy = "^0.942"
pytest-asyncio = "^0.18.3"
docker-compose = "^1.29.2"
PyPika = "^0.48.9"
asyncpg = "^0.25.0"
pyclean = "^2.2.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
