[tool.poetry]
name = "misery"
version = "0.2.0"
authors = ["Anton Evdokimov <meowmeowcode@gmail.com>"]
description = "asyncio-friendly database toolkit"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.1.0"
mypy = "^0.942"
pytest-asyncio = "^0.18.3"
docker-compose = "^1.29.2"
PyPika = "^0.48.9"
asyncpg = "^0.25.0"
pyclean = "^2.2.0"
Sphinx = "^4.5.0"
ipython = "^8.3.0"
aiohttp = "^3.8.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
